refactor: commonResponse 사용 및 request, response 생성 및 사용